--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
         <li class="nav-item"><a class="nav-link" href="/services">Services</a></li>
         <li class="nav-item"><a class="nav-link" href="/join">Join</a></li>
         <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="/portal/login.ejs">Portal</a></li>
+        <li class="nav-item"><a class="nav-link" href="/portal/login">Portal</a></li>
 
       </ul>
     </div>
