--- a/views/portal/login.ejs
+++ b/views/portal/login.ejs
@@ -132,7 +132,7 @@
     <!-- NEW PLACEHOLDER FORM FOR REDIRECT -->
     <form action="/portal/login" method="POST">
       <label for="memberId">Member ID</label>
-      <input type="text" id="memberId" name="memberId" class="form-control" placeholder="e.g. LDS123456" required>
+      <input type="text" id="memberId" name="memberId" class="form-control" placeholder="e.g. SACCO123456" required>
 
       <label for="password">Password</label>
       <input type="password" id="password" name="password" class="form-control" required>
