--- a/views/portal/signup.ejs
+++ b/views/portal/signup.ejs
@@ -93,7 +93,7 @@
 
     <form>
       <label for="memberId">Member ID</label>
-      <input type="text" id="memberId" class="form-control" placeholder="e.g. LDS12345" required aria-required="true">
+      <input type="text" id="memberId" class="form-control" placeholder="e.g. SACCO1234" required aria-required="true">
 
       <label for="name">Full Name</label>
       <input type="text" id="name" class="form-control" required aria-required="true">
