--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
   <div class="container">
     <!-- Brand -->
     <a class="navbar-brand fw-bold d-flex align-items-center" href="/">
-      <img src="/img/logo.png" alt="Deseret SACCO Logo" height="35" class="me-2">
+      <img src="/img/logo.jpg" alt="Deseret SACCO Logo" height="35" class="me-2">
       Deseret SACCO
     </a>
     
